--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,15 @@
   "description": "chatroom backend",
   "main": "main.js",
   "scripts": {
-    "test": "node main.js"
+    "test": "node main.js",
+    "start": "node main.js"
   },
   "author": "weixiao1998",
   "license": "Apache-2.0",
   "dependencies": {
     "express": "^4.17.1",
-    "mysql": "^2.17.1"
+    "express-session": "^1.17.0",
+    "mysql": "^2.17.1",
+    "node-schedule": "^1.3.2"
   }
 }
